# djet

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
django-viewtestcase/viewtestcase/: test.py
djet/: __init__.py  assertions.py  files.py  restframework.py  testcase.py  testcases.py  util.py  utils.py
docs/: Makefile  make.bat
docs/source/: assertions.rst  class_based_views.rst  conf.py  files.rst  function_based_views.rst  getting_started.rst  index.rst  integration_with_drf.rst  introduction.rst  utilities.rst
requirements/: requirements-development.txt  requirements-optional.txt
testproject/: settings.py
testproject/testapp/: models.py
testproject/testapp/tests/: test_assertions.py  test_files.py  test_restframework.py  test_testcases.py  test_utils.py
testproject/tests/: models.py  tests.py
testproject/tests/tests/: __init__.py  assertions.py  files.py  test_assertions.py  test_files.py  test_restframework.py  test_testcases.py  test_utils.py  testcases.py  utils.py
viewtestcase/: __init__.py  assertions.py  testcase.py
